# uniffi-bindgen-js

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  deny.toml  justfile
.github/workflows/: ci.yml  publish.yml
binding_tests/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
binding_tests/test/: arithmetic.test.ts  callbacks.test.ts  counter.test.ts  custom-types.test.ts  ffi-async.test.ts  ffi-basic.test.ts  ffi-callbacks.test.ts  ffi-compound.test.ts  ffi-custom-types.test.ts  ffi-errors.test.ts  ffi-features.test.ts  ffi-rename-exclude.test.ts  ffi-traits.test.ts  geometry.test.ts  keywords-demo.test.ts  rename-exclude.test.ts  rich-errors.test.ts  smoke.test.ts  stress.test.ts  traits.test.ts  type-zoo.test.ts
crates/ubjs_bindgen/: Cargo.toml
crates/ubjs_bindgen/src/: cli.rs  lib.rs  main.rs
crates/ubjs_bindgen/src/js/: config.rs  external_types.rs  ffi.rs  mod.rs  naming.rs  parsing.rs  render_helpers.rs  render_objects.rs  render_types.rs  runtime_ts.rs  type_lifting.rs  types.rs  wasm_metadata.rs
crates/ubjs_bindgen/tests/: golden_generated.rs
crates/ubjs_runtime/: Cargo.toml
crates/ubjs_runtime/src/: lib.rs
crates/ubjs_testing/: Cargo.toml
docs/: configuration.md  release.md  supported-features.md  testing.md
example/: README.md
example/rust/: Cargo.toml
example/rust/src/: example.udl  lib.rs
fixtures/arithmetic/expected/: arithmetic.ts
fixtures/arithmetic/src/: arithmetic.udl
fixtures/arithmetic/wasm/: Cargo.toml
fixtures/callbacks/expected/: callbacks.ts
fixtures/callbacks/src/: callbacks.udl
fixtures/callbacks/wasm/: Cargo.toml
fixtures/counter/expected/: counter.ts
fixtures/counter/src/: counter.udl
fixtures/counter/wasm/: Cargo.toml
fixtures/coverall-demo/expected/: coverall_demo.ts
fixtures/coverall-demo/src/: coverall_demo.udl
fixtures/custom-types/expected/: custom_types.ts  custom_types_lift.ts
fixtures/custom-types/src/: custom_types.udl  uniffi_lift.toml
fixtures/custom-types/wasm/: Cargo.toml
fixtures/docstrings/expected/: docstrings.ts
fixtures/docstrings/src/: docstrings.udl
fixtures/error-types-demo/expected/: error_types_demo.ts
fixtures/error-types-demo/src/: error_types_demo.udl
fixtures/ext-types-demo/expected/: ext_types_demo.ts
fixtures/ext-types-demo/src/: ext_types_demo.udl  uniffi.toml
fixtures/ffi-async/expected/: ffi_async.ts
fixtures/ffi-async/src/: ffi_async.udl
fixtures/ffi-async/wasm/: Cargo.toml
fixtures/ffi-basic/expected/: ffi_basic.ts
fixtures/ffi-basic/src/: ffi_basic.udl
fixtures/ffi-basic/wasm/: Cargo.toml
fixtures/ffi-callbacks/expected/: ffi_callbacks.ts
fixtures/ffi-callbacks/src/: ffi_callbacks.udl
fixtures/ffi-callbacks/wasm/: Cargo.toml
fixtures/ffi-compound/expected/: ffi_compound.ts
fixtures/ffi-compound/src/: ffi_compound.udl
fixtures/ffi-compound/wasm/: Cargo.toml
fixtures/ffi-custom-types/expected/: ffi_custom_types.ts
fixtures/ffi-custom-types/wasm/: Cargo.toml
fixtures/ffi-errors/expected/: ffi_errors.ts
fixtures/ffi-errors/src/: ffi_errors.udl
fixtures/ffi-errors/wasm/: Cargo.toml
fixtures/ffi-features/expected/: ffi_features.ts
fixtures/ffi-features/src/: ffi_features.udl
fixtures/ffi-features/wasm/: Cargo.toml
fixtures/ffi-rename-exclude/expected/: ffi_rename_exclude.ts
fixtures/ffi-rename-exclude/wasm/: Cargo.toml
fixtures/ffi-traits/expected/: ffi_traits.ts
fixtures/ffi-traits/src/: ffi_traits.udl
fixtures/ffi-traits/wasm/: Cargo.toml
scripts/: build_bindings.sh  build_ffi_fixture.sh  build_library_mode_fixture.sh  test_bindings.sh  typecheck_golden.sh
typecheck/: globals.d.ts
(+54 files in other folders)
