[workspace]
members = [
  "crates/ubjs_bindgen",
  "crates/ubjs_runtime",
  "crates/ubjs_testing",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Nick Chapman <nchapman@fastmail.com>"]
repository = "https://github.com/aspect-build/uniffi-bindgen-js"
keywords = ["uniffi", "typescript", "ffi", "codegen", "bindings"]
categories = ["development-tools::ffi"]
