[package]
name = "uniffi-bindgen-js"
description = "TypeScript/JavaScript bindings generator for UniFFI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "uniffi_bindgen_js"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen-js"
path = "src/main.rs"

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
uniffi_bindgen = "0.31.0"
uniffi_meta = "0.31.0"
wasmparser = "0.227"
