[package]
name = "ubjs_runtime"
description = "Runtime support library for uniffi-bindgen-js generated bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"
