[package]
name = "ubjs_testing"
description = "Test utilities for uniffi-bindgen-js"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"
